--- a/css/style.css
+++ b/css/style.css
@@ -104,3 +104,29 @@ footer > .block > span{
  .user-table table tr:first-child {
     background-color: inherit;
   }
+
+.adder-block{
+  display: none;
+  position: fixed;
+  top: 5%;
+  left: 38%;
+  right: 38%;
+  text-align: center;
+}
+.adder-block .center{
+  width: 300px;
+  margin: 0 auto;
+  text-align: right;
+  padding: 15px;
+  z-index: 30;
+}
+.shadow {
+  display: none;
+  position: absolute;
+  z-index: 29;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.6);
+}
